--- a/style.css
+++ b/style.css
@@ -1,29 +1,23 @@
 body {
-  font-family: Arial, sans-serif;
-  font-size: 13px;
+  font: 13px Arial, sans-serif;
 }
 
 h1 {
   font-size: 17px;
   font-weight: bold;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 h2 {
   font-size: 15px;
   font-weight: normal;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
-.link {
+a {
   color: green;
-  font-size: 15px;
-
 }
